--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,23 +26,23 @@
 <header class="group">
   <div class="container">
     <hgroup id="title">
-      <p><a href="<%= beta_url(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %>">Line Of <span>Thought</span></a></p>
+      <p><a href="<%= beta_url(:secure => false) %>">Line Of <span>Thought</span></a></p>
       <span>Tracking what powers the web</span>
     </hgroup>
     <ul id="current_user">
       <% if logged_in? %>
-        <li><%= link_to "Logout", destroy_user_session_path(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %></li>
-        <li><%= link_to "Account", edit_user_registration(:user, :host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %></li>
+        <li><%= link_to "Logout", destroy_user_session_path(:secure => false) %></li>
+        <li><%= link_to "Account", edit_user_registration(:secure => false) %></li>
       <% else %>
-        <li><a href="<%= new_user_session_url(:host => Settings.ssl_root_domain_with_port, :protocol => Settings.ssl_schema) %>">Sign In</a></li>
-        <li><a href="<%= new_user_registration_url(:host => Settings.ssl_root_domain_with_port, :protocol => Settings.ssl_schema) %>">Sign Up</a></li>
+        <li><a href="<%= new_user_session_url(:secure => Settings.force_ssl) %>">Sign In</a></li>
+        <li><a href="<%= new_user_registration_url(:secure => Settings.force_ssl) %>">Sign Up</a></li>
       <% end %>
     </ul>
     <nav>
       <ul>
-        <li><a href="<%= sites_url(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %>">Sites</a></li>
-        <li><a href="<%= tools_url(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %>">Tools</a></li>
-        <li><a href="<%= bookmarks_url(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %>">Bookmarks</a></li>
+        <li><a href="<%= sites_url(:secure => false) %>">Sites</a></li>
+        <li><a href="<%= tools_url(:secure => false) %>">Tools</a></li>
+        <li><a href="<%= bookmarks_url(:secure => false) %>">Bookmarks</a></li>
       </ul>
     </nav>
   </div>
@@ -66,15 +66,15 @@
     <section class="sidebar">
       <h3>Quick Nav</h3>
       <ul>
-        <li><a href="<%= about_url(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %>">About Line Of Thought</a></li>
-        <li><a href="<%= lineofthought_url(:host => Settings.root_domain_with_port, :protocol => Settings.default_schema) %>">Tools We Use</a></li>
+        <li><a href="<%= about_url(:secure => false) %>">About Line Of Thought</a></li>
+        <li><a href="<%= lineofthought_url(:secure => false) %>">Tools We Use</a></li>
         <li><a href="http://blog.lineofthought.com">Blog</a></li>
       </ul>
     </section>
   </div>
 </footer>
 <% if Rails.env == "production" %>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 <% else %>
   <script src="/javascripts/jquery/jquery.js" type="text/javascript"></script>
 <% end %>
