--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -6,19 +6,19 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <li><%= link_to "Sign up", new_registration_url(:secure => Settings.force_ssl) %></li>
+  <li><%= link_to "Sign up", new_user_registration_url(:secure => Settings.force_ssl) %></li>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <li><%= link_to "Forgot your password?", new_password_url(:secure => false) %></li>
+  <li><%= link_to "Forgot your password?", new_password_url %></li>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <li><%= link_to "Didn't receive confirmation instructions?", new_confirmation_url(:secure => false) %></li>
+  <li><%= link_to "Didn't receive confirmation instructions?", new_confirmation_url %></li>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <li><%= link_to "Didn't receive unlock instructions?", new_unlock_url(:secure => false) %></li>
+  <li><%= link_to "Didn't receive unlock instructions?", new_unlock_url %></li>
 <% end -%>
   </ul>
 </aside>
