--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -2,7 +2,7 @@
   <h3>Related Links</h3>
   <ul class="lst">
 <%- if controller_name != 'sessions' %>
-  <li><%= link_to "Sign in", new_session_url(:secure => Settings.force_ssl) %></li>
+  <li><%= link_to "Sign in", new_user_session_url(:secure => Settings.force_ssl) %></li>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
@@ -10,15 +10,15 @@
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <li><%= link_to "Forgot your password?", new_password_url %></li>
+  <li><%= link_to "Forgot your password?", new_user_password_url %></li>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <li><%= link_to "Didn't receive confirmation instructions?", new_confirmation_url %></li>
+  <li><%= link_to "Didn't receive confirmation instructions?", new_user_confirmation_url %></li>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <li><%= link_to "Didn't receive unlock instructions?", new_unlock_url %></li>
+  <li><%= link_to "Didn't receive unlock instructions?", new_user_unlock_url %></li>
 <% end -%>
   </ul>
 </aside>
