--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     <ul id="current_user">
       <% if logged_in? %>
         <li><%= link_to "Logout", destroy_user_session_path %></li>
-        <li><%= link_to "Account", edit_user_registration %></li>
+        <li><%= link_to "Account", edit_user_registration_path %></li>
       <% else %>
         <li><a href="<%= new_user_session_url(:secure => Settings.force_ssl) %>">Sign In</a></li>
         <li><a href="<%= new_user_registration_url(:secure => Settings.force_ssl) %>">Sign Up</a></li>
