--- a/app/views/site_tools/_using.erb
+++ b/app/views/site_tools/_using.erb
@@ -1,6 +1,6 @@
 <li class="edit-in-place group ind using" id="using_<%= using.id %>" data-id="<%= using.id %>">
   <h4><%= link_to using.tool.name, using.tool %></h4>
-  <% if current_user.claimed_site?(@site) || using.user_id == current_user.id || current_user.admin? %>
+  <% if current_user.can_edit_using?(using, @site) %>
     <ul class="actions">
       <li><%= link_to "edit", "#", :class => "edit-in-place-edit" %></li>
       <li class="edit-in-place-cancel"><%= link_to "cancel", "#" %></li>
