--- a/app/views/tools/_header.erb
+++ b/app/views/tools/_header.erb
@@ -1,6 +1,6 @@
 <div id="tool-header" class="show-header">
   <div class="content">
-    <h2><% if @tool.has_favicon? %><a href="<%=@tool.url%>" rel="nofollow" class="favicon"><img src="<%= @tool.full_favicon_url %>" /></a><% end %><%= @tool.name %></h2>
+    <h2><% if @tool.has_favicon? %><img src="<%= @tool.full_favicon_url %>" class="favicon" /><% end %><%= @tool.name %></h2>
     <ul class="count">
       <li class="sites"><%= link_to pluralize(@tool.sites_count, "site"), @tool %></li>
       <li class="links"><%= link_to pluralize(@tool.bookmarks_count, "bookmark"), @tool %></li>
