--- a/app/views/usings/_using_site.erb
+++ b/app/views/usings/_using_site.erb
@@ -1,14 +1,18 @@
+<%
+  site = @site || using_site.site
+  tool = @tool || using_tool.tool
+%>
 <li class="site group ind">
   <div class="title group">
-    <h4><% if using_site.site.has_favicon? %><a href="<%= site_path(using_site.site) %>" class="favicon"><img src="<%= using_site.site.full_favicon_url %>" /></a><% end %><%= link_to using_site.site.title, site_path(using_site.site) %></h4>
+    <h4><% if site.has_favicon? %><a href="<%= site_path(site) %>" class="favicon"><img src="<%= using_site.site.full_favicon_url %>" /></a><% end %><%= link_to site.title, site_path(site) %></h4>
     <ul class="mini-tools group">
-      <% if using_site.site.tools_count > 0 %>
-        <% if using_site.site.tools_count > 2 %>
-          <li><%= link_to "#{pluralize(using_site.site.tools_count-2, 'more tool')}", site_path(using_site.site, :format => params[:format]) %></li>
+      <% if site.tools_count > 0 %>
+        <% if site.tools_count > 2 %>
+          <li><%= link_to "#{pluralize(site.tools_count-2, 'more tool')}", site_path(site, :format => params[:format]) %></li>
         <% end %>
-        <%= raw site_tools(using_site.site, 2, params[:format]) %>
+        <%= raw site_tools(site, 2, params[:format]) %>
       <% end %>
-      <li><%= link_to "comments", site_tool_path(using_site.site, using_site.tool, :format => params[:format]), :class => "comments" %></li>
+      <li><%= link_to "comments", site_tool_path(site, tool, :format => params[:format]), :class => "comments" %></li>
     </ul>
   </div>
   <% unless using_site.description.blank? %><p><%= using_site.description %></p><% end %>
