--- a/app/views/usings/_using_site.erb
+++ b/app/views/usings/_using_site.erb
@@ -1,6 +1,6 @@
 <%
   site = @site || using_site.site
-  tool = @tool || using_tool.tool
+  tool = @tool || using_site.tool
 %>
 <li class="site group ind">
   <div class="title group">
