--- a/app/views/usings/_using_tool.erb
+++ b/app/views/usings/_using_tool.erb
@@ -1,5 +1,5 @@
 <%
-  site = @site || using_site.site
+  site = @site || using_tool.site
   tool = @tool || using_tool.tool
 %>
 <li class="tool group ind">
