Added GetSatisfaction support and fixes grammer error

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -9,7 +9,7 @@
   <p>The main URL, lineofthought.com, isn't publicly accessible yet until we hammer out a few more things. We're also not allowing sign ups just yet until we get core functionality in. This effectively means the site is in read-only mode until we're ready to launch.</p>
   
   <h3>Contact Us</h3>
-  <p>If you're looking to get in touch with us with a question, comment, suggestion, advertising opportunity or anything else? Shoot me (<a href="http://adamfortuna.com">Adam</a>) an email at <a href="mailto:contact@lineofthought.com">contact@lineofthought.com</a> and I'll get back to you. I'm sometimes on AIM as lineofadam as too.</p>
+  <p>If you're looking to get in touch with us with a question, comment, suggestion, advertising opportunity or anything else? Shoot me (<a href="http://adamfortuna.com">Adam</a>) an email at <a href="mailto:contact@lineofthought.com">contact@lineofthought.com</a> and I'll get back to you. I'm sometimes on AIM as <strong>lineofadam</strong> too.</p>
 </section>
 
 <sidebar>
