--- a/app/views/tools/_header.erb
+++ b/app/views/tools/_header.erb
@@ -14,3 +14,16 @@
     </ul>
   </div>
 </div>
+
+<ul class="tabs">
+  <li class="tools-show tool_sites-index"><%= link_to "Sites", tool_path(@tool, :format => params[:format]) %></li> 
+  <% if @tool.bookmarks_count > 0 %><li class="tools-bookmarks"><a href="<%= bookmarks_tool_path(@tool, :format => params[:format]) %>" class="bookmarks">Bookmarks</a></li><% end %>
+  <% if logged_in? %>
+    <% if current_user.can_edit_tool?(@tool) %>
+      <li class="right tools-edit"><%= link_to "Edit", edit_tool_path(@tool, :format => params[:format]) %></li> 
+    <% else %>
+      <!-- <li class="right tools-edit"><a href="#">Claim</a></li> -->
+    <% end %>
+  <% end %>
+  <li class="right tool_sites-manage"><%= link_to "Add sites", manage_tool_sites_path(@tool, :format => params[:format]) %></li> 
+</ul>
