--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -8,7 +8,7 @@
     <ul id="bookmarks-list" class="bookmarks main-list">
       <%= render @bookmarks %>
     </ul>
-    <%= will_paginate @bookmarks %>
+    <%= will_paginate @hits %>
   </section>
 </section>
 
