--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -18,4 +18,5 @@
     <h3>Learn More</h3>
     <p>Check what <%= link_to "tool we're using", lineofthought_url %>.</p>
     <p>Visit our <%= link_to "blog", "http://blog.lineofthought.com" %>.</p>
+  </aside>
 </sidebar>
