--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -3,36 +3,31 @@
   <h2><%= @title %></h2>
   <section>
 
-<% if @authentications %>
-  <% unless @authentications.empty? %>
-    <p><strong>You can sign in to this account using:</strong></p>
-    <div class="authentications">
-      <% for authentication in @authentications %>
-        <div class="authentication">
-          <%= image_tag "#{authentication.provider}_32.png", :size => "32x32" %>
-          <div class="provider"><%= authentication.provider.titleize %></div>
-          <div class="uid"><%= authentication.uid %></div>
-          <%= button_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove" %>
+    <% if @authentications %>
+      <% unless @authentications.empty? %>
+        <p><strong>You can sign in to this account using:</strong></p>
+        <div class="authentications">
+          <% for authentication in @authentications %>
+            <div class="authentication">
+              <%= image_tag "#{authentication.provider}_32.png", :size => "32x32" %>
+              <div class="provider"><%= authentication.provider.titleize %></div>
+              <div class="uid"><%= authentication.uid %></div>
+              <%= button_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove" %>
+            </div>
+          <% end %>
+          <div class="clear"></div>
         </div>
       <% end %>
-      <div class="clear"></div>
-    </div>
-  <% end %>
-  <p><strong>Add another service to sign in with:</strong></p>
-<% else %>
-  <p><strong>Sign in through one of these services:</strong></p>
-<% end %>
+      <p><strong>Add another service to sign in with:</strong></p>
+    <% else %>
+      <p><strong>Sign in through one of these services:</strong></p>
+    <% end %>
 
-<a href="/auth/facebook" class="auth_provider">
-  <%= image_tag "facebook_64.png", :size => "64x64", :alt => "Facebook" %>
-  Facebook
-</a>
-<a href="/auth/twitter" class="auth_provider">
-  <%= image_tag "twitter_64.png", :size => "64x64", :alt => "twitter" %>
-  Twitter
-</a>
-<div class="clear"></div>
-</section>
+    <ul>
+      <li><a href="/auth/facebook" class="auth_provider">Add Facebook connection</a></li>
+      <li><a href="/auth/twitter" class="auth_provider">Add Twitter connection</a></li>
+    </ul>
+  </section>
 </section>
 
 <%= render 'users/sidebar' %>
