--- a/app/views/bookmarks/_form.erb
+++ b/app/views/bookmarks/_form.erb
@@ -1,7 +1,7 @@
 <%= semantic_form_for @bookmark, bookmarks_path, :format => params[:format] do |f| %>
   <%= f.inputs do %>
     <%= f.input :link_id, :as => :hidden %>
-    <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL", :input_html => { :disabled => true } %>
+    <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
     <%= f.input :title, :as => :string, :required => true, :label => "Site Title" %>
     <%= f.input :description, :as => :text, :required => false, :label => "Bookmark Description", :input_html => { :rows => 3 } %>
     <%= f.input :is_video, :as => :boolean, :label => "Contains video?" %>
