--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,7 +1,7 @@
 <% title "Bookmark - #{@bookmark.title}" %>
 
 <section id="content" class="main tool">
-  <%= render 'header' %>
+  <%= render 'bookmarks/header' %>
 
   <section class="tab">
     <div class="title_bar group">
