--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%- title = yield(:title) %>
-  <title><%=  title || "Line Of Thought - Tracking what powers the web" %><%= " - Line Of Thought" if title && !title.blank? %></title>
+  <title><%= page_title %></title>
   <meta content="<%= page_description %>" name="description" />
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
   <meta content="en-us" http-equiv="Content-Language" />
@@ -67,6 +66,7 @@
     <section class="sidebar">
       <h3>Quick Nav</h3>
       <ul>
+        <li><a href="<%= tour_url %>">Take A Tour</a></li>
         <li><a href="<%= about_url %>">About Line Of Thought</a></li>
         <li><a href="<%= lineofthought_url %>">Tools We Use</a></li>
         <li><a href="http://blog.lineofthought.com">Blog</a></li>
@@ -75,9 +75,11 @@
   </div>
 </footer>
 <% if Rails.env == "production" %>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
 <% else %>
-  <script src="/javascripts/jquery/jquery.js" type="text/javascript"></script>
+  <script src="/javascripts/jquery/jquery-1.5.1.min.js" type="text/javascript"></script>
+  <script src="/javascripts/jquery/jquery-ui-1.8.11.custom.min.js" type="text/javascript"></script>
 <% end %>
 <%= raw javascript_include_merged :all %>
 <%= yield :javascript %>
