fix for broken image

--- a/app/views/saved_bookmark/_form.html.erb
+++ b/app/views/saved_bookmark/_form.html.erb
@@ -33,7 +33,7 @@
     	  <p>Start typing a tool name, then click add.</p>
     	  <p>If a tool of that name doesn't exist, we'll create it.</p>
     	</div>
-    	<img id="tool-favicon" src="/demos/autocomplete/images/transparent_1x1.png"  class="ui-state-default" />
+    	<img id="tool-favicon" src="/images/indicator.gif"  class="ui-state-default" />
     	<input id="tool"/>
     	<input type="hidden" id="tool-id"/>
     	<p id="tool-url"></p>
